@@ -1,3 +1,10 @@
+1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* ccache.c (ccache_read): Use munmap instead of vm_deallocate.
+	(ccache_invalidate): Likewise.
+	(ccache_free): Likewise.
+	* netfs.c (get_dirents): Likewise.
+
 Sun Jan 31 18:33:55 1999  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* netfs.c (netfs_attempt_utimes): Implement new possibility that
